# Project_Ember_Run_It_On_Your_Smart_Toaster

./: LEGAL-NOTICE.md  MYTHIC_ENGINEERING.md  ORIGINS.md  README.md  RULES.AI.md  TASK_CHATDOLL_CODEX.md  TASK_HERMES_CODEX.md  TASK_RAGNAROK_CODEX.md  TASK_SUPER_AGENT_PARTY_CODEX.md  TASK_WAIFU_CODEX.md  pyproject.toml
CloakBrowser/js/: README.md
CloakBrowser/tests/: test_cloakserve.py
Hamr/: ARCHITECTURE_11.md  ARCHITECTURE_12.md  ARCHITECTURE_13.md  ARCHITECTURE_14.md  ARCHITECTURE_15.md  ARCHITECTURE_17.md  AUDIT_17.md  CHANGELOG.md  CONTRIBUTING.md  DATA_FLOW_11.md  DATA_FLOW_12.md  DATA_FLOW_17.md  LICENSE  MANIFEST.in  MIGRATION.md  PHASE_11.md  PHASE_11_COMPLETE.md  PHASE_12.md  PHASE_12_COMPLETE.md  PHASE_13.md  PHASE_13_COMPLETE.md  PHASE_14.md  PHASE_15.md  PHASE_15_COMPLETE.md  PHASE_16.md  PHASE_16_COMPLETE.md  PHASE_17.md  README.md  RELEASE_NOTES.md  pyproject.toml  test_e2e.py  test_spec.json
Hamr/build_output/: .hamr_anime_girl_default_spec.json  .hamr_default_schoolgirl_preset.yaml  .hamr_default_schoolgirl_spec.json  e2e_build_anime_girl_default.py
Hamr/docs/: ARCHITECTURE.md  DOMAIN_MAP.md  INTERFACE.md  PHILOSOPHY.md  SYSTEM_VISION.md
Hamr/examples/: mage_volva.yaml  minimal.yaml  runa_gridweaver.yaml  spec_runa_gridweaver.yaml  warrior_shield_maiden.yaml
Hamr/src/hamr/: __init__.py  cli.py
Hamr/src/hamr/blender_bridge/: __init__.py  compat.py  e2e.py  e2e.py.backup  mesh_ops.py  runner.py  scene.py
Hamr/src/hamr/body/: __init__.py  forge.py  presets.py
Hamr/src/hamr/clothing/: __init__.py  mesh.py
Hamr/src/hamr/core/: __init__.py  a11y.py  benchmark.py  builder.py  constants.py  errors.py  gpu_profiles.py  inspect.py  iterate.py  models.py  perf.py  perf_gate.py  pipeline.py  pipeline_integrate.py  preset_versions.py  presets.py  regression.py  release.py  release_promotion.py  spec.py  texture_procedural.py  textures.py  validate.py
Hamr/src/hamr/docs/: __init__.py  a11y_audit.py  api_reference.py  generate.py
Hamr/src/hamr/export/: __init__.py  animation_clips.py  first_person.py  glb.py  vrm.py  vrm_validator.py
Hamr/src/hamr/face/: __init__.py  expressions.py
Hamr/src/hamr/hair/: __init__.py  mesh.py
Hamr/src/hamr/materials/: __init__.py  anime.py  mtoon.py
Hamr/src/hamr/rigs/: __init__.py  collision.py  poses.py  spring_bones.py  spring_tuning.py  stub_bones.py  verify.py  weights.py
Hamr/src/hamr/scripts/: build_avatar.py
Hamr/tests/: conftest.py  test_a11y.py  test_a11y_audit.py  test_animation_clips.py  test_api_reference.py  test_benchmark.py  test_blender_compat.py  test_build_integration.py  test_cli.py  test_clothing_mesh.py  test_collision.py  test_docs_generate.py  test_e2e_build.py  test_e2e_suite.py  test_expressions.py  test_first_person.py  test_gpu_profiles.py  test_hair_mesh.py  test_materials.py  test_mtoon.py  test_packaging.py  test_perf.py  test_perf_gate.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase7.py  test_phase8.py  test_phase9_10.py  test_pipeline_integrate.py  test_poses.py  test_preset_versions.py  test_presets.py  test_regression.py  test_regression_baseline.py  test_release.py  test_release_promotion.py  test_spec.py  test_spring_bones.py  (+6 more)
astrology-engine/: ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  LEGAL-NOTICE.md  NOTICE  README.md  ROADMAP.md  astrology_engine.py
config/: README.md  ember.example.yaml  sources.example.yaml  storage.example.yaml
deploy/: README.md
deploy/pi/: INSTALL.md
docs/: CROSS_PLATFORM_PLAN.md  DEVLOG.md  OPERATOR_PLAYBOOK.md  README.md  REPO_MAP.md  SLICE_2_RETROSPECTIVE.md  SYSTEM_VISION.md  UNWIRED_INVENTORY.md
docs/AIRI_Mythic_Plan/: 00_TABLE_OF_CONTENTS.md  01-Ember-AIRI-Core-Mesh-Architecture.md  01_Edge-Compute_Mesh_Architecture.md  02-Edge-Compute-Variable-Scaling.md  02_Variable_Performance_Scaling.md  03-Sentience-Synchronization-Protocol.md  03_Multi-Device_Distributed_Compute.md  04-Cross-Platform-Sensory-Inputs.md  04_Neural_Synchronization_Protocol.md  05-Holographic-Embodiment-Rendering.md  05_Quantum_Ledger_State_Engine.md  06-Quantum-State-Memory-Alaya.md  06_Zero_Trust_Security_Fabric.md  07-Swarm-Intelligence-Gaming.md  07_Dynamic_Deployment_Topologies.md  08-The-Grand-Orchestrator-ODIN.md  08_Omni-Device_Holographic_Runtime.md  09_Cognitive_Architecture_Deep_Dive.md  09_Project_Ember_Cognitive_Architecture.md  10_Project_Ember_Self_Awareness_Mechanisms.md  10_Self-Awareness_and_Metacognition.md  11_Emotional_Intelligence_Framework.md  11_Project_Ember_Emotional_Intelligence_Framework.md  12_Advanced_Reasoning_Pipelines.md  12_Project_Ember_Advanced_Reasoning_Engines.md  13_Project_Ember_Memory_and_Alaya_Integration.md  13_Subconscious_Stash_and_Latent_Knowledge.md  14_Distributed_Cognition_Models.md  14_Project_Ember_Sensory_Processing_and_Perception.md  15_Memory_Garbage_Collection.md  15_Project_Ember_Autonomy_and_Action_Selection.md  16_Mythic_Synthesis_Continuous_Integration.md  16_Project_Ember_Evolutionary_Learning_and_Adaptation.md  17_Ember_Immortal_Architecture.md  17_System_Resilience_Fundamentals.md  18_Ember_Self_Healing_Memory_Alaya.md  18_Self-Healing_Mechanisms.md  19_Ember_Autonomous_Bug_Resistance.md  19_Fault_Tolerance_Strategies.md  20_Bug_Resistance_and_Typing.md  (+62 more)
docs/ClawLite_Mythic_Plan/: 00_TABLE_OF_CONTENTS.md  01_GRAND_ARCHITECTURE_VISION.md  02_CROSS_PLATFORM_RUNTIME_ENGINE.md  04_MULTI_DEVICE_MESH_ARCHITECTURE.md  (+31 more)
examples/: README.md
kista/: ARCHITECTURE.md  BUG_REPORT.md  CODE_REVIEW.md  DOMAIN_MAP.md  ENTRY_TYPES.md  LICENSE  PHILOSOPHY.md  README.md  SKILL.md  SYSTEM_VISION.md  pyproject.toml
kista/references/: known-accounts.md  privacy-audit-checklist.md  v1.2.0-entry-types-session.md  v1.3.0-date-search-session.md
kista/scripts/: __init__.py  credstore.py
kista/tests/: test_credstore.py
scripts/: README.md
seidr_engine/: LICENSE  README.md  pyproject.toml
seidr_engine/seidr/: __init__.py  __main__.py  cli.py  forms.py  lexicon.py  poet.py
seidr_engine/tests/: test_seidr.py
src/: README.md
tests/: conftest.py
tools/: README.md
(+1023 files in other folders)
