[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ember-agent"
version = "0.1.5"
description = "Ember — a small, tethered, runs-anywhere AI companion. See docs/SYSTEM_VISION.md."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Volmarr Wyrd" },
]
keywords = [
    "ai-agent",
    "ai-companion",
    "edge-ai",
    "local-llm",
    "sovereign-ai",
    "mythic-engineering",
    "norse",
    "ember",
    "raspberry-pi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencies will be declared as each first-slice phase lands.
# See docs/architecture/EMBER_FIRST_SLICE_PLAN.md §1 for the planned pins.
# Until then, only the standard library is assumed.
dependencies = []

[project.optional-dependencies]
# Per-adapter dependencies, shipped as each phase lands. Operators
# install only the extras they need.
sqlite_vec = ["sqlite-vec>=0.1.6"]
config = ["pyyaml>=6.0"]   # Enables YAML config files. TOML config works without this.
# Planned for later phases (filled in as they land):
#   pgvector    = ["psycopg[binary]>=3.2", "pgvector>=0.3"]
#   qdrant      = ["qdrant-client>=1.9"]
#   chroma      = ["chromadb>=0.5"]
#   lancedb     = ["lancedb>=0.6"]
#   llamacpp    = ["llama-cpp-python>=0.2"]
#   validation  = ["pydantic>=2.7"]   # Richer config-error messages.
# Ollama (the first-slice Funi runtime) is reached over HTTP via the
# standard library — no client dependency required.
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
# The single official CLI entry point — Munnr.
ember = "ember.cli.main:main"

[project.urls]
Homepage = "https://github.com/hrabanazviking/Project_Ember_Run_It_On_Your_Smart_Toaster"
Source   = "https://github.com/hrabanazviking/Project_Ember_Run_It_On_Your_Smart_Toaster"
Issues   = "https://github.com/hrabanazviking/Project_Ember_Run_It_On_Your_Smart_Toaster/issues"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/ember"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs/methodology", "docs/archive", "vendor"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes baseline
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "TID",           # tidy imports
    "PL",            # pylint subset
    "RUF",           # ruff-specific
]
ignore = [
    "PLR2004",  # magic-value-comparison — too noisy at this stage
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/ember"]
exclude = ["tests/", "docs/", "scripts/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests through the real CLI / well (opt-in)",
    "requires_ollama: tests that need a local Ollama instance",
    "requires_lmstudio: tests that need a local LM Studio instance",
    "requires_pi: tests that need to run on a Raspberry Pi class device",
]

[tool.coverage.run]
source = ["src/ember"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
