[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hamr"
version = "0.8.0"
description = "Hamr — The Shape-Skin Engine. Open-source parametric 3D anime character forge."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Volmarr & Runa", email = "runeforgeai@agentmail.to"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python",
]
dependencies = [
    "numpy>=1.24",
    "Pillow>=9.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
blender = [
    # Blender modules are bundled — not pip-installable
    # bpy is available when running inside Blender
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
hamr = "hamr.cli:main"

[project.urls]
repository = "https://github.com/VolmarrShield/Hamr"
issues = "https://github.com/VolmarrShield/Hamr/issues"
documentation = "https://github.com/VolmarrShield/Hamr#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "blender: tests requiring Blender (bpy) to run",
    "slow: slow-running tests",
    "benchmark: performance benchmark tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true