[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kista"
version = "2.0.0"
description = "Kista — Self-owned encrypted credential vault (kista = Old Norse for strongbox/chest)"
authors = [
    {name = "Runa Gridweaver"},
]
requires-python = ">=3.9"
dependencies = [
    "cryptography",
]

[project.scripts]
kista = "scripts.credstore:main"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]